--- a/manuscript/page-16/body.html
+++ b/manuscript/page-16/body.html
@@ -1,6 +1,23 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p> <b> Right turn on red: </b>
+    You may turn right while the traffic signal
+displays a red light. Before turning, you must come to a
+complete stop. Look both ways and yield the right-of-way to
+pedestrians and other traffic. Be sure to check for less visible
+vehicles such as motorcycles, bicycles and mopeds. <b>You may
+not turn</b> right on red if signs are posted at the intersection that
+read “No Turn on Red,” or if a red arrow pointing to the right is
+displayed. </p>
+    <p><b> Left turn on red: </b>
+    You may turn left at a red light if you are on
+a one-way street and turning left onto another one-way street
+while the traffic signal displays a red light. Before turning, you
+must come to a complete stop. Look both ways and yield the
+right-of-way to pedestrians and other traffic. Be sure to check
+for less visible vehicles such as motorcycles, bicycles, and
+mopeds. <b> You may not turn left </b> on red if signs are posted at
+the intersection that read “No Turn on Red,” or if a red arrow
+pointing to the left is displayed. </p>
   </div>
 </div>
