--- a/manuscript/page-17/body.html
+++ b/manuscript/page-17/body.html
@@ -1,23 +1,26 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <b> Right turn on red: </b>
-    You may turn right while the traffic signal
-displays a red light. Before turning, you must come to a
-complete stop. Look both ways and yield the right-of-way to
-pedestrians and other traffic. Be sure to check for less visible
-vehicles such as motorcycles, bicycles and mopeds. <b>You may
-not turn</b> right on red if signs are posted at the intersection that
-read “No Turn on Red,” or if a red arrow pointing to the right is
-displayed. </p>
-    <p><b> Left turn on red: </b>
-    You may turn left at a red light if you are on
-a one-way street and turning left onto another one-way street
-while the traffic signal displays a red light. Before turning, you
-must come to a complete stop. Look both ways and yield the
-right-of-way to pedestrians and other traffic. Be sure to check
-for less visible vehicles such as motorcycles, bicycles, and
-mopeds. <b> You may not turn left </b> on red if signs are posted at
-the intersection that read “No Turn on Red,” or if a red arrow
-pointing to the left is displayed. </p>
+    <p> <b> Red arrow: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_arrow_on.jpg" alt="Red Arrow On" style="width:100px;height:100px;">
+      A red arrow means you must stop if you intend to
+move in the direction of the arrow. You may not
+proceed in the direction of the arrow as long
+as the red arrow is displayed, unless signs are
+posted at the intersection that read “Right on
+Red Arrow After Stop” or “Left on Red Arrow
+After Stop.” Virginia law prohibits right and left
+turns at red arrow lights.
+    <br> Note: If you are traveling in another state, make sure you know
+its laws for right and left turns at red and red arrow lights. </p>
+    <p> <b> Flashing red light: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_flashing.jpg" alt="Red Light Flashing" style="width:100px;height:100px;">
+      At a flashing red light, come
+to a complete stop and yield to oncoming
+vehicles and pedestrians. You may go when the
+way is clear. At a railroad crossing, you must
+come to a complete stop even if you don’t see a
+train. </p>
+    <p> <b>Flashing red arrow: </b> At a flashing red arrow, come to a
+    complete stop, yield the right-of-way to vehicles coming from
+    the other direction and pedestrians in the intersection, and
+    proceed in the direction of the arrow when the way is clear.</p>
   </div>
 </div>
