--- a/manuscript/page-18/body.html
+++ b/manuscript/page-18/body.html
@@ -1,26 +1,33 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <b> Red arrow: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_arrow_on.jpg" alt="Red Arrow On" style="width:100px;height:100px;">
-      A red arrow means you must stop if you intend to
-move in the direction of the arrow. You may not
-proceed in the direction of the arrow as long
-as the red arrow is displayed, unless signs are
-posted at the intersection that read “Right on
-Red Arrow After Stop” or “Left on Red Arrow
-After Stop.” Virginia law prohibits right and left
-turns at red arrow lights.
-    <br> Note: If you are traveling in another state, make sure you know
-its laws for right and left turns at red and red arrow lights. </p>
-    <p> <b> Flashing red light: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_flashing.jpg" alt="Red Light Flashing" style="width:100px;height:100px;">
-      At a flashing red light, come
-to a complete stop and yield to oncoming
-vehicles and pedestrians. You may go when the
-way is clear. At a railroad crossing, you must
-come to a complete stop even if you don’t see a
-train. </p>
-    <p> <b>Flashing red arrow: </b> At a flashing red arrow, come to a
-    complete stop, yield the right-of-way to vehicles coming from
-    the other direction and pedestrians in the intersection, and
-    proceed in the direction of the arrow when the way is clear.</p>
+    <p>
+    <b> Yellow light or arrow: </b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_light_on.jpg" alt="Yellow Light On" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_arrow_on.jpg" alt="Yellow Arrow On" style="width:100px;height:100px;">
+     A yellow light or arrow are cautions
+    warning that the light is about to change. If you have not
+    entered the intersection, stop;
+    or, if unsafe to stop, cautiously
+    go through it. If you are already
+    in the intersection, go through it
+    cautiously. Do not speed up to
+    beat the light.</p>
+    <p><b>Flashing yellow light:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_light_flashing.jpg" alt="Yellow Light FLashing" style="width:100px;height:100px;">
+     A flashing yellow light
+    means slow down and proceed with caution.
+    Flashing yellow lights are at locations with
+    higher-than-normal hazardous conditions.</p>
+    <p><b>Flashing yellow arrow:</b>
+     At a flashing yellow arrow, you may
+    turn in the direction of the arrow, if the way is clear. Yield
+    the right-of-way to vehicles coming from the other direction
+    and pedestrians in the intersection. Be sure to check for less
+    visible vehicles such as motorcycles, bicycles, and mopeds. If
+    a traffic light changes from red to flashing yellow arrow while a
+    pedestrian is in the intersection, allow the pedestrian to cross
+    the street before turning.
+    </p>
+
   </div>
 </div>
