--- a/manuscript/page-20/body.html
+++ b/manuscript/page-20/body.html
@@ -1,29 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p>
-    <b> Green light or arrow: </b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/green_light_on.jpg" alt="Green Light On" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/green_arrow_on.jpg" alt="Green Arrow On" style="width:100px;height:100px;">
-    At a green light, you may go if the way
-is clear. At a green arrow, you may go in the direction of the
-arrow if the way is clear. If you are turning, you must yield the
-right-of-way to vehicles coming from the other direction and
-pedestrians in the intersection. Be sure to check for less visible
-vehicles such as motorcycles,
-bicycles, and mopeds. If a traffic
-light changes from red to green
-while a pedestrian is in the street,
-allow the pedestrian to cross the
-street before turning.</p>
-    <p><b>Out of service signals: </b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/signals_out_of_service.jpg" alt="Signals Out Of Service" style="width:150px;height:120px">
-    When traffic signals are not working
-because of a power outage or other problem and not displaying
-any lights, you are required to stop, proceeding through the
-intersection as though it were an all-way stop. This does not
-apply if a law enforcement officer or other authorized person is
-directing traffic at the intersection, or if portable stop signs are
-in use.</p>
+    <p> <h4> Lane use signals</h4>indicate lanes where you can and
+cannot drive during different hours of the day.</p>
+    <p><b>Red X:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_cross_on.jpg" alt="Red X" style="width:100px;height:100px;">
+      Never drive in a lane marked with
+a red X signal.</p>
+    <p><b>Yellow X or Yellow Diagonal Downward Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_cross_on.jpg" alt="Yellow X" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_down_arrow.jpg" alt="Yellow Downward Arrow" style="width:100px;height:100px;">
+      These signals
+mean that you should move out
+of the lane as soon as safely
+possible.</p>
+    <p><b>Left-turn Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_arrow.jpg" alt="One Way Arrow" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/two_way_arrow.jpg" alt="Two Way Arrow" style="width:100px;height:100px;">
+      You are permitted
+to enter in a lane marked with a
+one-way or two-way arrow only to
+turn in the direction of the arrow.</p>
 
   </div>
 </div>
