--- a/manuscript/page-22/body.html
+++ b/manuscript/page-22/body.html
@@ -1,30 +1,28 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <h3> Traffic Signs</h3><p>
-    <p><h4>The color and shape of a traffic sign</h4> communicates
-    important information about the sign’s message. In poor
-    visibility conditions, such as heavy fog, you may be able to
-    make out only the shape of a sign. As you approach a sign
-    and while still distant, you may see the color long before you
-    can read the message or see the symbol, giving you some
-    advance information.</p>
-    <p><b>Sign Colors</b>
-      <br>
-      Sign colors help you know what the intention of the sign is.</p>
-    <p>Red used with white conveys stop, yield, do not, and no. Stop
-      signs, yield signs, do not enter or wrong way signs, the circle
-      and slash in a no turn sign, and the restrictions in a parking sign
-      are examples.</p>
-    <p>
-    Black used with white conveys regulatory information. Speed
-    limit, do not pass, no turns are examples where the operation is
-    regulated by law and the black and white sign would be found.
-    </p>
-    <p>
-    Yellow used with black conveys a warning. Curve ahead,
-    stop ahead, overhead clearances, slippery when wet, are all
-    examples. A specialized class of warning signs uses a strong
-    yellow/green color with black to advise of school zone activities
-    and other pedestrian activities.</p>
+
+    <p><b>No Left Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_left_turn.jpg" alt="No Left Turn Sign" style="width:50px;height:50px;">
+    Left turns are against the law. In
+Virginia, U-turns are considered as two left turns
+and are illegal if this sign is posted.</p>
+    <p><b>No Right Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_right_turn.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
+    Right turns are illegal. Do not
+make a right turn when you see this sign.</p>
+    <p><b>No U-Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_u_turn.jpg" alt="No U Turn Sign" style="width:50px;height:50px;">
+    U-turns are illegal. Do not make a
+   U-turn when you see this sign.</p>
+    <p><b>No Turn on Red:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_turn_on_red.jpg" alt="No Turn on Red Sign" style="width:50px;height:50px;">
+    You may not turn on the red
+   light. Wait for the signal to turn green.</p>
+    <p><b>Do Not Pass: </b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/do_not_pass.jpg" alt="Do Not Pass" style="width:50px;height:50px;">
+      This sign marks the beginning of
+      a no passing zone. You may not pass cars ahead
+      of you in your lane, even if the way is clear.</p>
+
   </div>
 </div>
