--- a/manuscript/page-24/body.html
+++ b/manuscript/page-24/body.html
@@ -1,43 +1,34 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p>Warning signs alert you to possible hazards ahead. Slow
+    down and watch for other signs or signals that may follow.</p>
 
-    <p><b>Left Turn Yield on Green:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/left_turn_green_yield.jpg" alt="Left Turn Yield on Green" style="width:50px;height:50px;">
-      This sign is used with
-a traffic signal.
-      It tells you that the traffic turning
-left at a green light does not have the right-ofway
-and must yield to traffic coming from the
-other direction. Stop and look for oncoming
-traffic, then proceed with caution.</p>
+    <p><b>Advisory Speed:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/exit_speed.jpg" alt="exit_speed" style="width:50px;height:50px;">
+      This sign indicates the
+    maximum safe speed for a highway exit.
+    Reduced Speed Limit Ahead: Prepare
+    to reduce your speed; the speed limit is
+    changing ahead.</p>
 
-    <p><b>Keep Right:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/keep_right.jpg" alt="Keep Right" style="width:50px;height:50px;">
-      A traffic island, median or barrier is
-ahead. Keep to the side indicated by the arrow.<p>
+    <p><b>Signal Ahead:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/traffic_signals.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
+      Traffic signals are ahead. Slow
+    down and be ready to stop.</p>
 
-    <p><b>Lane Use Control:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_1.jpg" alt="Lane Use Control 1" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_2.jpg" alt="Lane Use Control 2" style="width:50px;height:50px;">
-      These signs are
-used where turns are required or
-where special turning movements
-are permitted for specific lanes.
-Traffic in the lane must turn in the
-direction of the arrow.</p>
+    <p><b>No Passing Zone:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_passing_zone.jpg" alt="No Passing Zone" style="width:50px;height:50px;">
+      This sign marks the
+beginning of a no passing zone. You may not
+pass cars ahead of you in your lane, even if the
+way is clear.
 
-    <p><b>High Occupancy Vehicle:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hov.jpg" alt="HOV" style="width:50px;height:50px;">
-      These signs indicate
-lanes reserved for buses and vehicles with a
-driver and one or more passengers as specified
-on the sign.</p>
+    <p><b>Merge:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_merge.jpg" alt="Lane Merge" style="width:50px;height:50px;">
+        Two lanes of traffic moving in the same
+direction are about to become one. Drivers in
+both lanes are responsible for merging safely.</p>
 
-    <p><b>Disabled Parking:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/disable_parking.jpg" alt="Disabled Parking" style="width:50px;height:50px;">
-      Parking spaces marked with
-these signs are reserved for people with disabled
-parking permits.</p>
 
   </div>
 </div>
