--- a/manuscript/page-25/body.html
+++ b/manuscript/page-25/body.html
@@ -1,34 +1,34 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p>Warning signs alert you to possible hazards ahead. Slow
-    down and watch for other signs or signals that may follow.</p>
 
-    <p><b>Advisory Speed:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/exit_speed.jpg" alt="exit_speed" style="width:50px;height:50px;">
-      This sign indicates the
-    maximum safe speed for a highway exit.
-    Reduced Speed Limit Ahead: Prepare
-    to reduce your speed; the speed limit is
-    changing ahead.</p>
+    <p><b>Lane Reduction:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_reduction.jpg" alt="Lane Reduction" style="width:50px;height:50px;">
+      The right lane ends soon.
+    Drivers in the right lane must merge left when
+    space opens up. Drivers in the left lane should
+    allow other vehicles to merge smoothly.</p>
 
-    <p><b>Signal Ahead:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/traffic_signals.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
-      Traffic signals are ahead. Slow
-    down and be ready to stop.</p>
+    <p><b>Divided Highway Begins:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_begins.jpg" alt="Divided Highway Begins" style="width:50px;height:50px;">
+      The highway ahead
+    is split into two separate roadways by a median
+    or divider and each roadway is one-way. Keep
+    right.</p>
 
-    <p><b>No Passing Zone:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_passing_zone.jpg" alt="No Passing Zone" style="width:50px;height:50px;">
-      This sign marks the
-beginning of a no passing zone. You may not
-pass cars ahead of you in your lane, even if the
-way is clear.
+    <p><b>Divided Highway Ends:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_ends.jpg" alt="Divided Highway Ends" style="width:50px;height:50px;">
+      The highway ahead no
+    longer has a median or divider. Traffic goes in
+    both directions. Keep right.</p>
 
-    <p><b>Merge:</b>
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_merge.jpg" alt="Lane Merge" style="width:50px;height:50px;">
-        Two lanes of traffic moving in the same
-direction are about to become one. Drivers in
-both lanes are responsible for merging safely.</p>
-
+    <p><b>Roundabout:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/roundabout.jpg" alt="Roundabout Sign" style="width:50px;height:50px;">
+      These signs indicate a circular
+    intersection with an island in the center is
+    ahead. Also called rotaries or traffic circles,
+    these intersections may have one or more lanes.
+    Entering traffic must yield the right-of-way to
+    traffic already in the circle.</p>
 
   </div>
 </div>
