--- a/manuscript/page-26/body.html
+++ b/manuscript/page-26/body.html
@@ -1,34 +1,26 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p><b>Slippery When Wet:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/slippery_when_wet.jpg" alt="Slippery When Wet" style="width:50px;height:50px;">
+        When pavement is wet,
+reduce your speed. Do not brake hard or
+change direction suddenly. Increase the distance
+between your car and the one ahead of you.
 
-    <p><b>Lane Reduction:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_reduction.jpg" alt="Lane Reduction" style="width:50px;height:50px;">
-      The right lane ends soon.
-    Drivers in the right lane must merge left when
-    space opens up. Drivers in the left lane should
-    allow other vehicles to merge smoothly.</p>
+    <p><b>Low Clearance Sign:</b>
+       <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_clearance_sign.jpg" alt="Low Clearance Sign" style="width:50px;height:50px;">
+       The overpass ahead has a
+low clearance. Do not proceed if your vehicle is
+taller than the height shown on the sign.</p>
 
-    <p><b>Divided Highway Begins:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_begins.jpg" alt="Divided Highway Begins" style="width:50px;height:50px;">
-      The highway ahead
-    is split into two separate roadways by a median
-    or divider and each roadway is one-way. Keep
-    right.</p>
+    <p><b>Hill:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hill.jpg" alt="Hill Sign" style="width:50px;height:50px;">
+      A steep grade is ahead. Check your
+brakes.</p>
 
-    <p><b>Divided Highway Ends:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_ends.jpg" alt="Divided Highway Ends" style="width:50px;height:50px;">
-      The highway ahead no
-    longer has a median or divider. Traffic goes in
-    both directions. Keep right.</p>
-
-    <p><b>Roundabout:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/roundabout.jpg" alt="Roundabout Sign" style="width:50px;height:50px;">
-      These signs indicate a circular
-    intersection with an island in the center is
-    ahead. Also called rotaries or traffic circles,
-    these intersections may have one or more lanes.
-    Entering traffic must yield the right-of-way to
-    traffic already in the circle.</p>
-
+    <p><b>Deer Crossing:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/deer_crossing.jpg" alt="Deer Crossing" style="width:50px;height:50px;">
+        Deer cross the roadway in this
+area. Slow down, be alert and be ready to stop.</p>
   </div>
 </div>
