--- a/manuscript/page-27/body.html
+++ b/manuscript/page-27/body.html
@@ -1,26 +1,32 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b>Slippery When Wet:</b>
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/slippery_when_wet.jpg" alt="Slippery When Wet" style="width:50px;height:50px;">
-        When pavement is wet,
-reduce your speed. Do not brake hard or
-change direction suddenly. Increase the distance
-between your car and the one ahead of you.
+    <p><b>Pedestrian Crossing:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pedestrian_crossing_sign_1.jpg" alt="Pedestrian Crossing Sign 1" style="width:50px;height:50px;">
+      Watch for
+people entering a crosswalk or
+crossing your path. Slow down
+and be prepared to stop. A second sign with an arrow
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pedestrian_crossing_sign_2.jpg" alt="Pedestrian Crossing Sign 2" style="width:50px;height:50px;">
+      may show the actual location of the crosswalk.</p>
 
-    <p><b>Low Clearance Sign:</b>
-       <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_clearance_sign.jpg" alt="Low Clearance Sign" style="width:50px;height:50px;">
-       The overpass ahead has a
-low clearance. Do not proceed if your vehicle is
-taller than the height shown on the sign.</p>
+    <p><b>Bicycle Crossing/Bike Path:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/bicycle_crossing_sign_1.jpg" alt="Bicycle Crossing Sign 1" style="width:50px;height:50px;">
+      Bicycles regularly cross or ride
+beside traffic in this area. Drive
+with caution. A second sign
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/bicycle_crossing_sign_2.jpg" alt="Bicycle Crossing Sign 2" style="width:50px;height:50px;">
+      with an arrow may show the actual location of the bike crossing.</p>
 
-    <p><b>Hill:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hill.jpg" alt="Hill Sign" style="width:50px;height:50px;">
-      A steep grade is ahead. Check your
-brakes.</p>
+    <p><b>School Zone/School Crossing:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_crossing_sign_1.jpg" alt="School Crossing Sign 1" style="width:50px;height:50px;">
+      Slow down. The speed limit is
+usually 25 MPH. Watch out for
+children crossing the street or
+playing. Be ready to stop. Obey
+signals from any crossing guards.
+      A second sign
+<img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_crossing_sign_2.jpg" alt="School Crossing Sign 2" style="width:50px;height:50px;">
+      with an arrow may show the actual location of the crosswalk.<p>
 
-    <p><b>Deer Crossing:</b>
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/deer_crossing.jpg" alt="Deer Crossing" style="width:50px;height:50px;">
-        Deer cross the roadway in this
-area. Slow down, be alert and be ready to stop.</p>
   </div>
 </div>
