--- a/manuscript/page-28/body.html
+++ b/manuscript/page-28/body.html
@@ -1,32 +1,38 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b>Pedestrian Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pedestrian_crossing_sign_1.jpg" alt="Pedestrian Crossing Sign 1" style="width:50px;height:50px;">
-      Watch for
-people entering a crosswalk or
-crossing your path. Slow down
-and be prepared to stop. A second sign with an arrow
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pedestrian_crossing_sign_2.jpg" alt="Pedestrian Crossing Sign 2" style="width:50px;height:50px;">
-      may show the actual location of the crosswalk.</p>
 
-    <p><b>Bicycle Crossing/Bike Path:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/bicycle_crossing_sign_1.jpg" alt="Bicycle Crossing Sign 1" style="width:50px;height:50px;">
-      Bicycles regularly cross or ride
-beside traffic in this area. Drive
-with caution. A second sign
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/bicycle_crossing_sign_2.jpg" alt="Bicycle Crossing Sign 2" style="width:50px;height:50px;">
-      with an arrow may show the actual location of the bike crossing.</p>
+    <p><b>Open Joints:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/open_joints.jpg" alt="Open Joints" style="width:50px;height:50px;">
+      Slow down. Open joints on
+bridges or ramps could cause a motorcyclist
+to lose control of the motorcycle.</p>
 
-    <p><b>School Zone/School Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_crossing_sign_1.jpg" alt="School Crossing Sign 1" style="width:50px;height:50px;">
-      Slow down. The speed limit is
-usually 25 MPH. Watch out for
-children crossing the street or
-playing. Be ready to stop. Obey
-signals from any crossing guards.
-      A second sign
-<img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_crossing_sign_2.jpg" alt="School Crossing Sign 2" style="width:50px;height:50px;">
-      with an arrow may show the actual location of the crosswalk.<p>
+    <p><b>Expansion Joints:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/expansion_joints.jpg" alt="Expansion Joints" style="width:50px;height:50px;">
+      This sign is used when a joint
+    across lanes creates a bump or is wide enough
+    to cause loss of traction in wet weather.</p>
+
+    <p><b>Crossroad:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossraod.jpg" alt="Crossraod" style="width:50px;height:50px;">
+      A four-way intersection is ahead.
+Be ready to yield the right-of-way.</p>
+
+    <p><b>Side Road:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/side_road.jpg" alt="Side Road" style="width:50px;height:50px;">
+      A road joins from the right. Be alert
+for vehicles entering the roadway you are
+traveling on.</p>
+
+    <p><b>Y Intersection:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/y_intersection.jpg" alt="Y Intersection" style="width:50px;height:50px;">
+      You must bear either right or left ahead.</p>
+
+    <p><b>T Intersection:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/t_intersection.jpg" alt="T Intersection" style="width:50px;height:50px;">
+      The roadway you are traveling
+on ends ahead. Signal before turning right or
+left.</p>
 
   </div>
 </div>
