--- a/manuscript/page-29/body.html
+++ b/manuscript/page-29/body.html
@@ -1,38 +1,32 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Open Joints:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/open_joints.jpg" alt="Open Joints" style="width:50px;height:50px;">
-      Slow down. Open joints on
-bridges or ramps could cause a motorcyclist
-to lose control of the motorcycle.</p>
+    <p><b>Right Curve – Side Road:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_curve_side_road.jpg" alt="Right Curve Side Road" style="width:50px;height:50px;">
+      The road ahead
+    curves right and a side road joins from the left
+    within the curve. Be alert for vehicles entering
+    the roadway you are traveling on.</p>
 
-    <p><b>Expansion Joints:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/expansion_joints.jpg" alt="Expansion Joints" style="width:50px;height:50px;">
-      This sign is used when a joint
-    across lanes creates a bump or is wide enough
-    to cause loss of traction in wet weather.</p>
+    <p><b>Sharp Right Turn:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/sharp_right_turn.jpg" alt="Sharp Right Turn" style="width:50px;height:50px;">
+      Slow down and be prepared
+    for a sharp right turn in the road ahead.</p>
 
-    <p><b>Crossroad:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossraod.jpg" alt="Crossraod" style="width:50px;height:50px;">
-      A four-way intersection is ahead.
-Be ready to yield the right-of-way.</p>
+    <p><b>Sharp Right and Left Turns:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/sharp_right_left_turns.jpg" alt="Sharp Right Left_turns" style="width:50px;height:50px;">
+      Slow down and
+    be prepared for the road ahead to turn sharply
+    right, then left.</p>
 
-    <p><b>Side Road:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/side_road.jpg" alt="Side Road" style="width:50px;height:50px;">
-      A road joins from the right. Be alert
-for vehicles entering the roadway you are
-traveling on.</p>
 
-    <p><b>Y Intersection:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/y_intersection.jpg" alt="Y Intersection" style="width:50px;height:50px;">
-      You must bear either right or left ahead.</p>
+    <p><b>Right and Left Curves:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_left_curves.jpg" alt="Right Left Curves" style="width:50px;height:50px;">
+      The road ahead curves right, then left. Slow down.</p>
 
-    <p><b>T Intersection:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/t_intersection.jpg" alt="T Intersection" style="width:50px;height:50px;">
-      The roadway you are traveling
-on ends ahead. Signal before turning right or
-left.</p>
+    <p><b>Right Curve with Safe Speed Indicator:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_curves_safe_speed_ind.jpg" alt="Right Curves With Safe Speed Ind" style="width:50px;height:50px;">
+      The road ahead curves right. Slow down to the safe speed limit indicated.</p>
 
   </div>
 </div>
