--- a/manuscript/page-33/body.html
+++ b/manuscript/page-33/body.html
@@ -1,44 +1,33 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Crossbuck and Flashing Lights:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights.jpg" alt="Crossbuck With Flashing lights" style="width:50px;height:50px;">
-       Flashing lights
-may be used with crossbuck signs. Always stop
-when the light begins to flash and be alert for
-approaching trains. Do not proceed until all
-trains or any other vehicles using the rails have
-passed, the tracks are clear, and the lights are
-no longer flashing. Be especially alert at multitrack
-crossings because a second train could be
-approaching from the opposite direction.</p>
+    <p>Note: School buses must always stop at railroad crossings,
+    even when the lights are not flashing.</p>
 
-    <p><b>Crossbuck, Flashing Lights and Gate:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights_gate.jpg" alt="Crossbuck with Flashing Lights & Gate" style="width:50px;height:50px;">
-      Gates are used with flashing light signals at some
-crossings. Stop when the lights begin to flash and
-before the gate lowers. Remain stopped until the
-gates are raised and the lights stop flashing. Do
-not attempt to drive around the
-lowered gate.</p>
+    <p>If a dangerous condition exists at a
+    rail crossing, call the number listed on
+    the emergency sign.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/emergency_rr.jpg" alt="Emergency On RR" style="width:50px;height:50px;">
+    This will allow
+    the rail company to stop or reroute
+    approaching rail traffic until the hazard
+    is removed. Be sure to give the posted
+    crossing number so that the hazard can
+    be identified correctly.</p>
 
-    <p>Pavement markings, consisting
-      of an X and RR, may
-      be painted on the
-      pavement at the
-      approach to some
-      crossings.
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pavement_rr.jpg" alt="RR Sign on Pavements" style="width:50px;height:50px;">
-      When approaching railroad
-      tracks, be alert. Trains
-      may approach the
-      crossing at any time and
-      from either direction.
-      Unless you can clear the
-      tracks completely, never
-      start across the tracks.
-      Make sure there is room for your vehicle on the other side of
-      the tracks before proceeding.</p>
+    <p>If your car
+    stalls on the
+    tracks, don’t
+    hesitate.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/car_stall_rr.jpg" alt="Car Stalls on RR" style="width:50px;height:50px;">
+    Get out of the car
+    right away and
+    run diagonally
+    away from the
+    tracks in the
+    direction of
+    the oncoming
+    train.</p>
 
   </div>
 </div>
