--- a/manuscript/page-34/body.html
+++ b/manuscript/page-34/body.html
@@ -1,33 +1,34 @@
-<div class="leaf flex">
-  <div class="inner justify ">
+  <div class="leaf flex">
+    <div class="inner justify ">
+      <p>
+        <!-- Why is this boldface? Why a comma after zone. -->
+        <b> In a work zone,</b> the lives of highway construction workers depend on drivers like you obeying the posted speed limits. If you are convicted of exceeding the speed limit in a highway work zone, you may be fined up to $500. Remember, the color orange marks a work zone and means slow down and be alert.</p>
+      <p>
+        <!-- Why is this boldface, capitalized words?. -->
+        <b>Rough Road, Bump, or Uneven Lanes:</b>
+    
+        <!-- Why inline style when you can use classes/css? Why alt values are capitalized? Why hardcoding width:150px, height:50px ? -->
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rough_bump_uneven.jpg" alt="Rough Bump Uneven Road" style="width:150px;height:50px;"> 
 
-    <p>Note: School buses must always stop at railroad crossings,
-    even when the lights are not flashing.</p>
+        These signs are used when certain road conditions, such as loose gravel or road construction, affect the roadway surface and create potentially difficult conditions for motorists, especially motorcyclists.
+      </p>
 
-    <p>If a dangerous condition exists at a
-    rail crossing, call the number listed on
-    the emergency sign.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/emergency_rr.jpg" alt="Emergency On RR" style="width:50px;height:50px;">
-    This will allow
-    the rail company to stop or reroute
-    approaching rail traffic until the hazard
-    is removed. Be sure to give the posted
-    crossing number so that the hazard can
-    be identified correctly.</p>
+      <p>
+        <!-- boldface capitzalize words?-->
+        <b>Road Construction Ahead – Detour:</b>
+        <!-- Again inline hardcoded style when you can use classes/css! -->
 
-    <p>If your car
-    stalls on the
-    tracks, don’t
-    hesitate.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/car_stall_rr.jpg" alt="Car Stalls on RR" style="width:50px;height:50px;">
-    Get out of the car
-    right away and
-    run diagonally
-    away from the
-    tracks in the
-    direction of
-    the oncoming
-    train.</p>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/road_work.jpg" alt="Road Work" style="width:50px;height:50px;">
 
-  </div>
-</div>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/detour.jpg" alt="Detour" style="width:50px;height:50px;"> 
+
+        These signs indicate a change in the traffic pattern or route ahead. Slow down. Unusual or potentially dangerous conditions are ahead.
+
+        <p>
+          <b>Flashing Arrow Panels:</b> 
+          <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flashing_arrow.jpg" alt="Flashing Arrow" style="width:50px;height:50px;"> 
+          Large flashing arrow panels or flashing message signs in work zones direct drivers to proceed into different traffic lanes and inform them that part of the road ahead is closed.
+        </p>
+    </div>
+
+    <!-- Why is the first <div> not closed with a </div> -->
