--- a/manuscript/page-36/body.html
+++ b/manuscript/page-36/body.html
@@ -1,39 +1,34 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Flaggers:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flaggers.jpg" alt="Flaggers" style="width:50px;height:50px;">
-      Flaggers are construction
-workers who normally wear orange or
-yellow vests, or yellow-green shirts or
-jackets. They use STOP/SLOW paddles
-and red flags to direct traffic through
-the work zone and to let other workers
-or construction vehicles cross the road.</p>
+    <p><b>Slow Moving Vehicles</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/slow_moving_sign.jpg" alt="Slow Moving Sign" style="width:50px;height:50px;">
+      traveling at 25 MPH or less,
+such as farm equipment and horse-drawn
+vehicles, must display these signs when using
+a public highway. Be prepared to adjust your
+speed or position when you see a vehicle with
+one of these signs.</p>
 
-    <p><b>Traffic Control Devices:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/barricades.jpg" alt="Barricades" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/drums.jpg" alt="Drums" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/cones.jpg" alt="Cones" style="width:50px;height:50px;">
-      Barricades, vertical signs, concrete
-barriers, drums and cones are the
-most common devices used to guide
-drivers safely through work zones.
-When driving near the devices, keep
-your vehicle in the middle of the lane
-and obey the posted speed limit. As
-you leave the work zone, stay in your
-lane and maintain your speed. Don’t
-change lanes until you are completely
-clear of the work zone.
+    <p><b>Pavement Markings</b>
+      Road markings guide and warn drivers as well as regulate
+      traffic. Markings may be red, blue, yellow or white. They
+      may be used alone or in combinations. Each has a different
+      meaning.</p>
 
-    <p><b>Message Boards:</b>
-      You may see portable or permanent
-message boards along roadways. They provide information
-about traffic, road, weather or other hazardous conditions.
-Always obey any directions posted on these message boards.
-For information about road conditions or road construction,
-visit the Virginia Department of Transportation website at
-www.virginiadot.org.</p>
+    <p><b>Red markings</b>
+       are generally not used; but, some communities
+      do use red curbs to indicate no parking zones.</p>
+
+    <p><b> Red reflectors</b> on the pavement show areas not to be entered
+      or used. They are positioned on the road surface so that only
+      traffic flowing in the wrong direction would observe them.
+
+    <p><b>Blue markings</b> show parking spaces for persons with
+      disabilities.</p>
+
+    <p><b>Yellow center</b> lines mean two-way traffic, flowing in
+      opposite directions.</p>
+
   </div>
 </div>
