--- a/manuscript/page-37/body.html
+++ b/manuscript/page-37/body.html
@@ -1,34 +1,24 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p><b>Broken yellow center lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_yellow_center_lines.jpg" alt="Broken Yellow Center Lines" style="width:150px;height:200px;">
+      mean that passing on the left
+      is allowed in either direction
+      when the way ahead is clear.</p>
 
-    <p><b>Slow Moving Vehicles</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/slow_moving_sign.jpg" alt="Slow Moving Sign" style="width:50px;height:50px;">
-      traveling at 25 MPH or less,
-such as farm equipment and horse-drawn
-vehicles, must display these signs when using
-a public highway. Be prepared to adjust your
-speed or position when you see a vehicle with
-one of these signs.</p>
-
-    <p><b>Pavement Markings</b>
-      Road markings guide and warn drivers as well as regulate
-      traffic. Markings may be red, blue, yellow or white. They
-      may be used alone or in combinations. Each has a different
-      meaning.</p>
-
-    <p><b>Red markings</b>
-       are generally not used; but, some communities
-      do use red curbs to indicate no parking zones.</p>
-
-    <p><b> Red reflectors</b> on the pavement show areas not to be entered
-      or used. They are positioned on the road surface so that only
-      traffic flowing in the wrong direction would observe them.
-
-    <p><b>Blue markings</b> show parking spaces for persons with
-      disabilities.</p>
-
-    <p><b>Yellow center</b> lines mean two-way traffic, flowing in
-      opposite directions.</p>
-
+    <p><b>A broken yellow line
+      alongside a solid yellow line</b>
+      means that passing is allowed
+      from the side of the broken
+      line, but not from the side of
+      the solid line.<br><br>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_solid_yellow_lines.jpg" alt="Broken Solid Yellow Lines" style="width:150px;height:200px;">
+      Vehicles on the solid yellow
+      line side may only cross the
+      line to pass pedestrians,
+      scooters or skateboards,
+      bicyclists, and riders of
+      when the opposite lane is
+      clear and you can pass safely.</p>
   </div>
 </div>
