--- a/manuscript/page-38/body.html
+++ b/manuscript/page-38/body.html
@@ -1,24 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b>Broken yellow center lines</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_yellow_center_lines.jpg" alt="Broken Yellow Center Lines" style="width:150px;height:200px;">
-      mean that passing on the left
-      is allowed in either direction
-      when the way ahead is clear.</p>
+    <p><b>Double solid yellow lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/double_solid_yellow_lines.jpg" alt="Double Solid Yellow Lines" style="width:200px;height:200px;">
+      mark the center of the road
+and separate traffic traveling
+in two different directions.
+Passing is not allowed in
+either direction. You may not
+cross the lines unless you are
+making a left turn or passing
+pedestrians, bicyclists,
+and riders of scooters or
+skateboards, when the
+opposite lane is clear and
+you can pass safely.</p>
 
-    <p><b>A broken yellow line
-      alongside a solid yellow line</b>
-      means that passing is allowed
-      from the side of the broken
-      line, but not from the side of
-      the solid line.<br><br>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_solid_yellow_lines.jpg" alt="Broken Solid Yellow Lines" style="width:150px;height:200px;">
-      Vehicles on the solid yellow
-      line side may only cross the
-      line to pass pedestrians,
-      scooters or skateboards,
-      bicyclists, and riders of
-      when the opposite lane is
-      clear and you can pass safely.</p>
+    <p><b>Broken white lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_white_lines.jpg" alt="Broken White Lines" style="width:200px;height:200px;">
+      separate lanes of traffic going in the
+same direction. You may
+change lanes with caution.</p>
+
   </div>
 </div>
