--- a/manuscript/page-39/body.html
+++ b/manuscript/page-39/body.html
@@ -1,25 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b>Double solid yellow lines</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/double_solid_yellow_lines.jpg" alt="Double Solid Yellow Lines" style="width:200px;height:200px;">
-      mark the center of the road
-and separate traffic traveling
-in two different directions.
-Passing is not allowed in
-either direction. You may not
-cross the lines unless you are
-making a left turn or passing
-pedestrians, bicyclists,
-and riders of scooters or
-skateboards, when the
-opposite lane is clear and
-you can pass safely.</p>
+    <p><b>Dotted white lines</b> are actually small rectangles in a series
+    where each is closely spaced to the next. They are used to
+    show lane assignment in intersections and interchanges where
+    there might otherwise be a tendency to drift out of a lane or
+    an area of intended use. Often they are used to guide two
+    turning lanes through the intersection. Dotted white lines
+    are also used to denote the opening of a turn lane at an
+    intersection and entrance/exit lanes at interchanges.</p>
 
-    <p><b>Broken white lines</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_white_lines.jpg" alt="Broken White Lines" style="width:200px;height:200px;">
-      separate lanes of traffic going in the
-same direction. You may
-change lanes with caution.</p>
+    <p>Many two-lane roads in Virginia <b>do not have lane markings</b>
+to separate the lanes. On an unmarked two-lane road, you
+may pass a slow moving vehicle on the left side if there are no
+signs prohibiting passing. Make sure that the way is clear.</p>
+
+    <p><b>Solid white lines</b> show turn lanes and discourage lane
+    changes near intersections, and at other locations where lane
+    changes might
+    be dangerous.
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/solid_white_lines.jpg" alt="Solid White Lines" style="width:200px;height:200px;">
+    </p>
 
   </div>
 </div>
