--- a/manuscript/page-41/body.html
+++ b/manuscript/page-41/body.html
@@ -1,20 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p>Solid white
-    lines also mark
-    the right edge
-    of pavement.
-    Arrows used
-    with white lines
-    indicate which
-    turn may be
-    made from the
-    lane. Stop lines,
-    crosswalks and
-    parking spaces
-    also are marked
-    by white lines.</p>
-
-
+    <h1> Hello world! </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
