--- a/manuscript/page-14/body.html
+++ b/manuscript/page-14/body.html
@@ -1,21 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Traffic Signals </h1>
-
-    <p> Traffic signals, signs and pavement markings are used for traffic control to provide a smooth, orderly flow of traffic. It is
-important to understand and obey them. It is illegal to avoid these traffic controls by cutting through a parking lot or field. </p>
-    <p> Obey all signs and signals unless directed by a police officer;
-always follow the officer’s direction. </p>
-    <h3> Traffic Signals </h3>
-    <p> Traffic signals apply to drivers, motorcycle riders, bicyclists,
-moped-riders and pedestrians.</p>
-    <p><b> Red Light: </b>
-
-    At a red light, <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_on.jpg" alt="Red Light On" style="width:100px;height:100px;">
-    <br>come to a complete stop
-at the stop line or, if there is no stop line, before
-entering the intersection or before reaching the
-crosswalk. Remain stopped as long as the signal is
-red, unless turns are allowed.</p>
+    <h1> Hello world! </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
