--- a/manuscript/page-21/body.html
+++ b/manuscript/page-21/body.html
@@ -1,25 +1,30 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <h4> Lane use signals</h4>indicate lanes where you can and
-cannot drive during different hours of the day.</p>
-    <p><b>Red X:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_cross_on.jpg" alt="Red X" style="width:100px;height:100px;">
-      Never drive in a lane marked with
-a red X signal.</p>
-    <p><b>Yellow X or Yellow Diagonal Downward Arrow:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_cross_on.jpg" alt="Yellow X" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_down_arrow.jpg" alt="Yellow Downward Arrow" style="width:100px;height:100px;">
-      These signals
-mean that you should move out
-of the lane as soon as safely
-possible.</p>
-    <p><b>Left-turn Arrow:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_arrow.jpg" alt="One Way Arrow" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/two_way_arrow.jpg" alt="Two Way Arrow" style="width:100px;height:100px;">
-      You are permitted
-to enter in a lane marked with a
-one-way or two-way arrow only to
-turn in the direction of the arrow.</p>
-
+    <p> <h3> Traffic Signs</h3><p>
+    <p><h4>The color and shape of a traffic sign</h4> communicates
+    important information about the sign’s message. In poor
+    visibility conditions, such as heavy fog, you may be able to
+    make out only the shape of a sign. As you approach a sign
+    and while still distant, you may see the color long before you
+    can read the message or see the symbol, giving you some
+    advance information.</p>
+    <p><b>Sign Colors</b>
+      <br>
+      Sign colors help you know what the intention of the sign is.</p>
+    <p>Red used with white conveys stop, yield, do not, and no. Stop
+      signs, yield signs, do not enter or wrong way signs, the circle
+      and slash in a no turn sign, and the restrictions in a parking sign
+      are examples.</p>
+    <p>
+    Black used with white conveys regulatory information. Speed
+    limit, do not pass, no turns are examples where the operation is
+    regulated by law and the black and white sign would be found.
+    </p>
+    <p>
+    Yellow used with black conveys a warning. Curve ahead,
+    stop ahead, overhead clearances, slippery when wet, are all
+    examples. A specialized class of warning signs uses a strong
+    yellow/green color with black to advise of school zone activities
+    and other pedestrian activities.</p>
   </div>
 </div>
