--- a/manuscript/page-23/body.html
+++ b/manuscript/page-23/body.html
@@ -1,28 +1,43 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>No Left Turn:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_left_turn.jpg" alt="No Left Turn Sign" style="width:50px;height:50px;">
-    Left turns are against the law. In
-Virginia, U-turns are considered as two left turns
-and are illegal if this sign is posted.</p>
-    <p><b>No Right Turn:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_right_turn.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
-    Right turns are illegal. Do not
-make a right turn when you see this sign.</p>
-    <p><b>No U-Turn:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_u_turn.jpg" alt="No U Turn Sign" style="width:50px;height:50px;">
-    U-turns are illegal. Do not make a
-   U-turn when you see this sign.</p>
-    <p><b>No Turn on Red:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_turn_on_red.jpg" alt="No Turn on Red Sign" style="width:50px;height:50px;">
-    You may not turn on the red
-   light. Wait for the signal to turn green.</p>
-    <p><b>Do Not Pass: </b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/do_not_pass.jpg" alt="Do Not Pass" style="width:50px;height:50px;">
-      This sign marks the beginning of
-      a no passing zone. You may not pass cars ahead
-      of you in your lane, even if the way is clear.</p>
+    <p><b>Left Turn Yield on Green:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/left_turn_green_yield.jpg" alt="Left Turn Yield on Green" style="width:50px;height:50px;">
+      This sign is used with
+a traffic signal.
+      It tells you that the traffic turning
+left at a green light does not have the right-ofway
+and must yield to traffic coming from the
+other direction. Stop and look for oncoming
+traffic, then proceed with caution.</p>
+
+    <p><b>Keep Right:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/keep_right.jpg" alt="Keep Right" style="width:50px;height:50px;">
+      A traffic island, median or barrier is
+ahead. Keep to the side indicated by the arrow.<p>
+
+    <p><b>Lane Use Control:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_1.jpg" alt="Lane Use Control 1" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_2.jpg" alt="Lane Use Control 2" style="width:50px;height:50px;">
+      These signs are
+used where turns are required or
+where special turning movements
+are permitted for specific lanes.
+Traffic in the lane must turn in the
+direction of the arrow.</p>
+
+    <p><b>High Occupancy Vehicle:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hov.jpg" alt="HOV" style="width:50px;height:50px;">
+      These signs indicate
+lanes reserved for buses and vehicles with a
+driver and one or more passengers as specified
+on the sign.</p>
+
+    <p><b>Disabled Parking:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/disable_parking.jpg" alt="Disabled Parking" style="width:50px;height:50px;">
+      Parking spaces marked with
+these signs are reserved for people with disabled
+parking permits.</p>
 
   </div>
 </div>
