--- a/manuscript/page-30/body.html
+++ b/manuscript/page-30/body.html
@@ -1,32 +1,39 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Right Curve – Side Road:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_curve_side_road.jpg" alt="Right Curve Side Road" style="width:50px;height:50px;">
-      The road ahead
-    curves right and a side road joins from the left
-    within the curve. Be alert for vehicles entering
-    the roadway you are traveling on.</p>
+    <p><b>Winding Road:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/winding_road.jpg" alt="Winding Road" style="width:50px;height:50px;">
+      The road ahead winds with
+    a series of turns or curves. On all curves, slow
+    down for better control.</p>
 
-    <p><b>Sharp Right Turn:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/sharp_right_turn.jpg" alt="Sharp Right Turn" style="width:50px;height:50px;">
-      Slow down and be prepared
-    for a sharp right turn in the road ahead.</p>
+    <p><b>Low Ground Railroad Crossing:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_ground_railroad_xing.jpg" alt="Low Ground Railroad Crossing" style="width:50px;height:50px;">
+      A steep slope where the railroad tracks cross the road may
+    cause the bottom of low vehicles to get caught
+    or drag on the tracks.</p>
 
-    <p><b>Sharp Right and Left Turns:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/sharp_right_left_turns.jpg" alt="Sharp Right Left_turns" style="width:50px;height:50px;">
-      Slow down and
-    be prepared for the road ahead to turn sharply
-    right, then left.</p>
+    <p><b>Railroad Crossing:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xing.jpg" alt="Railroad Crossing" style="width:50px;height:50px;">
+      Advance warning signs are
+    placed before a railroad crossing. These signs
+    warn you to look, listen, slow down and be
+    prepared to stop for trains or any vehicles using
+    the rails.</p>
 
+    <p><b>Railroad Crossbuck:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck.jpg" alt="Railroad Crossbuck" style="width:50px;height:50px;">
+      This sign is a warning of a
+    railroad crossing. Look, listen, slow down and
+    be prepared to stop for trains or any vehicles
+    using the rails.</p>
 
-    <p><b>Right and Left Curves:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_left_curves.jpg" alt="Right Left Curves" style="width:50px;height:50px;">
-      The road ahead curves right, then left. Slow down.</p>
-
-    <p><b>Right Curve with Safe Speed Indicator:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/right_curves_safe_speed_ind.jpg" alt="Right Curves With Safe Speed Ind" style="width:50px;height:50px;">
-      The road ahead curves right. Slow down to the safe speed limit indicated.</p>
+    <p><b>Railroad Crossbuck and Track Indicator:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck_with_track_ind.jpg" alt="Railroad Crossbuck with Track Ind" style="width:50px;height:50px;">
+      If there is more than one track, the sign below the
+    crossbuck will indicate the number of tracks at
+    the crossing. Slow down and be prepared to
+    stop.</p>
 
   </div>
 </div>
