--- a/manuscript/page-32/body.html
+++ b/manuscript/page-32/body.html
@@ -1,6 +1,44 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> EMPTY PAGE </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><b>Crossbuck and Flashing Lights:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights.jpg" alt="Crossbuck With Flashing lights" style="width:50px;height:50px;">
+       Flashing lights
+may be used with crossbuck signs. Always stop
+when the light begins to flash and be alert for
+approaching trains. Do not proceed until all
+trains or any other vehicles using the rails have
+passed, the tracks are clear, and the lights are
+no longer flashing. Be especially alert at multitrack
+crossings because a second train could be
+approaching from the opposite direction.</p>
+
+    <p><b>Crossbuck, Flashing Lights and Gate:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights_gate.jpg" alt="Crossbuck with Flashing Lights & Gate" style="width:50px;height:50px;">
+      Gates are used with flashing light signals at some
+crossings. Stop when the lights begin to flash and
+before the gate lowers. Remain stopped until the
+gates are raised and the lights stop flashing. Do
+not attempt to drive around the
+lowered gate.</p>
+
+    <p>Pavement markings, consisting
+      of an X and RR, may
+      be painted on the
+      pavement at the
+      approach to some
+      crossings.
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pavement_rr.jpg" alt="RR Sign on Pavements" style="width:50px;height:50px;">
+      When approaching railroad
+      tracks, be alert. Trains
+      may approach the
+      crossing at any time and
+      from either direction.
+      Unless you can clear the
+      tracks completely, never
+      start across the tracks.
+      Make sure there is room for your vehicle on the other side of
+      the tracks before proceeding.</p>
+
   </div>
 </div>
