--- a/manuscript/page-35/body.html
+++ b/manuscript/page-35/body.html
@@ -1,34 +1,39 @@
-  <div class="leaf flex">
-    <div class="inner justify ">
-      <p>
-        <!-- Why is this boldface? Why a comma after zone. -->
-        <b> In a work zone,</b> the lives of highway construction workers depend on drivers like you obeying the posted speed limits. If you are convicted of exceeding the speed limit in a highway work zone, you may be fined up to $500. Remember, the color orange marks a work zone and means slow down and be alert.</p>
-      <p>
-        <!-- Why is this boldface, capitalized words?. -->
-        <b>Rough Road, Bump, or Uneven Lanes:</b>
-    
-        <!-- Why inline style when you can use classes/css? Why alt values are capitalized? Why hardcoding width:150px, height:50px ? -->
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rough_bump_uneven.jpg" alt="Rough Bump Uneven Road" style="width:150px;height:50px;"> 
+<div class="leaf flex">
+  <div class="inner justify ">
 
-        These signs are used when certain road conditions, such as loose gravel or road construction, affect the roadway surface and create potentially difficult conditions for motorists, especially motorcyclists.
-      </p>
+    <p><b>Flaggers:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flaggers.jpg" alt="Flaggers" style="width:50px;height:50px;">
+      Flaggers are construction
+workers who normally wear orange or
+yellow vests, or yellow-green shirts or
+jackets. They use STOP/SLOW paddles
+and red flags to direct traffic through
+the work zone and to let other workers
+or construction vehicles cross the road.</p>
 
-      <p>
-        <!-- boldface capitzalize words?-->
-        <b>Road Construction Ahead – Detour:</b>
-        <!-- Again inline hardcoded style when you can use classes/css! -->
+    <p><b>Traffic Control Devices:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/barricades.jpg" alt="Barricades" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/drums.jpg" alt="Drums" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/cones.jpg" alt="Cones" style="width:50px;height:50px;">
+      Barricades, vertical signs, concrete
+barriers, drums and cones are the
+most common devices used to guide
+drivers safely through work zones.
+When driving near the devices, keep
+your vehicle in the middle of the lane
+and obey the posted speed limit. As
+you leave the work zone, stay in your
+lane and maintain your speed. Don’t
+change lanes until you are completely
+clear of the work zone.
 
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/road_work.jpg" alt="Road Work" style="width:50px;height:50px;">
-
-        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/detour.jpg" alt="Detour" style="width:50px;height:50px;"> 
-
-        These signs indicate a change in the traffic pattern or route ahead. Slow down. Unusual or potentially dangerous conditions are ahead.
-
-        <p>
-          <b>Flashing Arrow Panels:</b> 
-          <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flashing_arrow.jpg" alt="Flashing Arrow" style="width:50px;height:50px;"> 
-          Large flashing arrow panels or flashing message signs in work zones direct drivers to proceed into different traffic lanes and inform them that part of the road ahead is closed.
-        </p>
-    </div>
-
-    <!-- Why is the first <div> not closed with a </div> -->
+    <p><b>Message Boards:</b>
+      You may see portable or permanent
+message boards along roadways. They provide information
+about traffic, road, weather or other hazardous conditions.
+Always obey any directions posted on these message boards.
+For information about road conditions or road construction,
+visit the Virginia Department of Transportation website at
+www.virginiadot.org.</p>
+  </div>
+</div>
