--- a/manuscript/page-40/body.html
+++ b/manuscript/page-40/body.html
@@ -1,25 +1,20 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b>Dotted white lines</b> are actually small rectangles in a series
-    where each is closely spaced to the next. They are used to
-    show lane assignment in intersections and interchanges where
-    there might otherwise be a tendency to drift out of a lane or
-    an area of intended use. Often they are used to guide two
-    turning lanes through the intersection. Dotted white lines
-    are also used to denote the opening of a turn lane at an
-    intersection and entrance/exit lanes at interchanges.</p>
+    <p>Solid white
+    lines also mark
+    the right edge
+    of pavement.
+    Arrows used
+    with white lines
+    indicate which
+    turn may be
+    made from the
+    lane. Stop lines,
+    crosswalks and
+    parking spaces
+    also are marked
+    by white lines.</p>
 
-    <p>Many two-lane roads in Virginia <b>do not have lane markings</b>
-to separate the lanes. On an unmarked two-lane road, you
-may pass a slow moving vehicle on the left side if there are no
-signs prohibiting passing. Make sure that the way is clear.</p>
-
-    <p><b>Solid white lines</b> show turn lanes and discourage lane
-    changes near intersections, and at other locations where lane
-    changes might
-    be dangerous.
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/solid_white_lines.jpg" alt="Solid White Lines" style="width:200px;height:200px;">
-    </p>
 
   </div>
 </div>
