--- a/manuscript/page-6/body.html
+++ b/manuscript/page-6/body.html
@@ -1,6 +1,18 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p>
+      My plane has just landed at Dulles Airport in Washington. I am full of excitement to meet my wife after a month since I saw her last and 24 hour journey from other corner of the world.
+      When I told her that I am finally coming to states to live with header, she started making plans, a lot of plans actually. Long drives, late night movies, parties, dinners and daily office drop and pick up, just to spend more time with me.
+      Now she'll enjoy her time while I would be driving the car, she had bought here in US. She is already calling me <strong>'The Driver'</strong> on the phone.
+      I left my job, rented house and my first car, Hyundai Grand i10. It's been only 2 years and I already had driving experience of more than 32000 kms.
+      I have got my international driving license issued.
+    </p>
+
+    <p>
+      And Here she is, waiving her hand and cheering with my name. We hugged each other and I finally got to see the car, which I was eagerly waiting to try my hands on the roads of DC.
+      I wanted to drive, but she asked me to give some time to adapt new surroundings and learn the rules of the road here.
+    </p>
+
   </div>
 </div>
